1116 fix wrong margin for content

--- a/src/www/css/less/xivo.less
+++ b/src/www/css/less/xivo.less
@@ -24,12 +24,12 @@ body {
 
 #bc-main {
   &::before {
-    margin-top: 35px;
+    margin-top: 50px;
   }
 }
 
 #bc-content {
-  margin-top: 12px;
+  margin-top: 15px;
   float: inherit;
 }
 .b-form {
